--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.17.3",
+    "nanoid": "^3.3.1",
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
